1st landing page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
          </button>
 
 </div>
+    <!-- landing box -->
+     <div class="flex ">
+         <button class="px-4 py-2 rounded-xl bg-cyan-400 shadow-xl text-center mt-12 font-bold ">
+            <a href="landing-project-1/index.html" class="rounded-full text-center p-2 bg-white text-bold text-xl">03</a>
+            Product Project
+         </button>
+
+</div>
      </div>
   </body>
 </html>
