--- a/landing-project-1/index.html
+++ b/landing-project-1/index.html
@@ -186,7 +186,7 @@
     </div>
 
     <!-- logos section -->
-     <div class=" grid  grid-cols-1  md:grid-cols-5 mx-auto w-fit  mb-24 gap-14">
+     <div class=" grid  grid-cols-1  md:grid-cols-5 mx-auto w-fit  mb-24 gap-14 px-8">
       <!-- google -->
          <img src="./images/logo-google.png" alt="">
       <!-- IBM -->
@@ -246,7 +246,7 @@
           
         </div>
         <!-- social media -->
-         <div class="flex space-x-8">
+         <div class="flex space-x-8 mr-4">
           <img src="./images/icon-facebook.svg" alt="">
           <img src="./images/icon-twitter.svg" alt="">
           <img src="./images/icon-instagram.svg" alt="">
