--- a/index.html
+++ b/index.html
@@ -38,8 +38,24 @@
     <!-- landing box -->
      <div class="flex ">
          <button class="px-4 py-2 rounded-xl bg-cyan-400 shadow-xl text-center mt-12 font-bold ">
-            <a href="landing-project-1/index.html" class="rounded-full text-center p-2 bg-white text-bold text-xl">03</a>
+            <a href="landing-project-1/index.html" class="rounded-full text-center p-2 bg-white text-bold text-xl">04</a>
            Clipboard Project 01
+         </button>
+
+</div>
+    <!-- landing box -->
+     <div class="flex ">
+         <button class="px-4 py-2 rounded-xl bg-cyan-400 shadow-xl text-center mt-12 font-bold ">
+            <a href="landing-project-2/index.html" class="rounded-full text-center p-2 bg-white text-bold text-xl">05</a>
+           Testimonials Project 02
+         </button>
+
+</div>
+    <!-- landing box -->
+     <div class="flex ">
+         <button class="px-4 py-2 rounded-xl bg-cyan-400 shadow-xl text-center mt-12 font-bold ">
+            <a href="landing-project-3/index.html" class="rounded-full text-center p-2 bg-white text-bold text-xl">06</a>
+           loopstudio Project 03
          </button>
 
 </div>
