--- a/landing-project-3/index.html
+++ b/landing-project-3/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <!-- interactive section -->
-    <div class="flex flex-col md:flex-row md:justify-center p-6">
+    <div class="flex flex-col md:flex-row md:justify-center p-6 px-12">
       <div class="md:hidden">
         <img src="images/mobile/image-interactive.jpg" alt="" />
       </div>
@@ -75,7 +75,7 @@
 
     <!-- creation section -->
     <div
-      class="flex justify-center md:justify-between mt-36 mb-12 max-w-6xl mx-auto"
+      class="flex justify-center md:justify-between mt-36 mb-12 max-w-6xl mx-auto px-12"
     >
       <!-- title -->
       <h1 class="text-4xl text-center uppercase">our creations</h1>
@@ -173,7 +173,7 @@
 
     <!-- creation photos  desktop-->
     <div
-      class="grid-cols-4 max-w-6xl mx-auto gap-8 hidden md:block md:grid overflow-hidden my-8 mb-24"
+      class="grid-cols-4 max-w-6xl mx-auto gap-8 hidden md:block md:grid overflow-hidden my-8 mb-24 px-12"
     >
       <!-- box 1 -->
       <div class="relative group hover:opacity-40 duration-200">
